# edge-offloading-app

./: .gitmodules  README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/org/portablecl/poclaisademo/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/kernels/: compress_seg.cl  copy.cl
android/app/src/main/cpp/: CMakeLists.txt  PingThread.cpp  PingThread.h  RawImageReader.cpp  RawImageReader.hpp  codec_select.cpp  codec_select.h  codec_select_wrapper.h  config.h.in.cmake  dnn_stage.c  dnn_stage.cpp  dnn_stage.h  dnn_stage.hpp  eval.cpp  eval.h  eval_network_model.cpp  eval_network_model.h  event_logger.c  event_logger.h  hevc_compression.c  hevc_compression.h  jniWrapper.cpp  jniWrapperV2.cpp  jni_discovery.cpp  jni_utils.cpp  jni_utils.h  jpegReader.cpp  jpegReader.h  jpeg_compression.c  jpeg_compression.h  native-lib.cpp  opencl_utils.cpp  opencl_utils.hpp  platform.h  poclImageProcessor.cpp  poclImageProcessor.h  poclImageProcessorTypes.h  poclImageProcessorUtils.cpp  poclImageProcessorUtils.h  poclImageProcessorV2.cpp  (+17 more)
android/app/src/main/java/org/portablecl/poclaisademo/: AutoFitTextureView.java  BenchmarkConfigurationActivity.java  BenchmarkService.java  BundleKeys.java  CameraLogger.java  CodecConfig.java  ConfigStore.java  DevelopmentVariables.java  Discovery.java  DiscoveryDNSSD.java  DiscoverySelect.java  DiscoverySpinnerAdapter.java  DropEditText.java  EnergyMonitor.java  FPSCounter.java  JNIPoclImageProcessor.java  JNIutils.java  JniUtilsInterface.java  MainActivity.java  OverlayVisualizer.java  PingMonitor.java  PoclImageProcessor.java  StartupActivity.java  StatLogger.java  TrafficMonitor.java
android/app/src/main/res/layout/: activity_benchmark_configuration.xml  activity_main.xml  activity_startup.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/org/portablecl/poclaisademo/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
bandwidth-tests/: CMakeLists.txt  bandwidth_tests.c  bandwidth_tests.h  main.c
pcapp/: .env.nu  CMakeLists.txt  lttng_profile.bash  main.cpp  opencl_utils.hpp
pcapp/VideoReader/: CMakeLists.txt  testRawImageReader.cpp
pcapp/tests/: CMakeLists.txt  TestPingThread.cpp  test_4b.cpp
pcapp/tests/data/: segmentation.bin.old
scripts/: aisa.Dockerfile  build_onnxruntime_ubuntu2310.md  build_opencv.bash  build_opencv_ubuntu2310.bash  build_turbojpeg.bash  clion-config.nu  docker_build_opencv.bash  latency.nu  pocl.Dockerfile
